--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pyjwt = "^1.7.1"
 loguru = "^0.4.1"
 tortoise-orm = "^0.16.4"
 python-dotenv = "^0.12.0"
+asyncpg = "^0.20.1"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.6.2"
